
### Type system:

- #10174: Make Tsubst more robust by avoiding strange workarounds
  (Takafumi Saikawa and Jacques Garrigue, review by Gabriel Scherer and
   Florian Angeletti)

### Runtime system:

- #9284: Add -config option to display the configuration of ocamlrun on stdout,
  including the search path for shared stub libraries.
  (David Allsopp, review by Xavier Leroy)

- #10025: Track custom blocks (e.g. Bigarray) with Statmemprof
  (Stephen Dolan, review by Leo White, Gabriel Scherer and Jacques-Henri
   Jourdan)

- #10102: Ignore PROFINFO_WIDTH if WITH_PROFINFO is not defined (technically
  a breaking change if the configuration system was being abused before).
  (David Allsopp, review by Xavier Leroy)

* #10098: Improve command-line parsing in ocamlrun: strictly recognise options,
  be more informative for `ocamlrun -I` and support `--` for terminating options
  parsing.
  (David Allsopp, review by Xavier Leroy)

- #10101: Add -help/--help option to ocamlrun.
  (David Allsopp, review by Xavier Leroy)

- #10136: Minor clean-ups in runtime/io.c and runtime/caml/io.h
  (Xavier Leroy, review by David Allsopp and Guillaume Munch-Maccagnoni)

### Code generation and optimizations:

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

### Standard library:

- #9582: Add Array.{find_opt,find_map,split,combine}.
  (Nicolás Ojeda Bär, review by Daniel Bünzli and Gabriel Scherer)

### Other libraries:

* #10084: Unix.open_process_args* functions now look up the program in the PATH.
  This was already the case under Windows, but this is now also done under
  Unix. Note that previously the program was interpreted relative to the current